<resources>
    <string name="app_name">Buttless.io</string>
    <string name="login_appname">ButtLess</string>
    <string name="caption">exchange your megots rewards with points</string>

    <string name="facebook_app_id">3186798148209797</string>
    <string name="fb_login_protocol_scheme">fb3186798148209797</string>

    <string name="url_api">http://192.168.1.25:9002/api/</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LET\'S GO</string>
    <string name="slide_1_title">What is it?</string>
    <string name="slide_1_desc">We redeem your reward points with discounts from various member brands.</string>
    <string name="slide_2_title">How it works?</string>
    <string name="slide_2_desc">Putt any cigarette butts you have into one of the terminals we set up within the city and earn points.</string>
    <string name="slide_3_title">I\'s it that important?</string>
    <string name="slide_3_desc">Trust us, Cigarette butts are highly polluting things in the city, your contribution matters a lot!</string>

    <string name="login_desc">We guarantee your security with SSL connections</string>

    <string name="timeout_error">The server was slow to respond, try again</string>
    <string name="no_connection_error">It looks like you have no internet, can you check?</string>
    <string name="auth_failure_error">We had an authentication problem, please try again</string>
    <string name="server_error">The server is unstable, wait and try again</string>
    <string name="network_error">Check the quality of your internet, we are having problems</string>
    <string name="parse_error">We got errors when fetching responses from the server, try again</string>
    <string name="default_error">An error has occurred, we are being advised to correct</string>

    <string name="error_google_play_library">Google Play Billing library could not be started</string>
    <string name="error_item_not_found">Purchase item not found</string>
    <string name="error_purchase_cancelled">Cancelled purchase</string>
    <string name="error_invalid_purchase">Invalid purchase</string>
    <string name="error_pending_purchase">The purchase is pending. Please complete the transaction</string>
    <string name="error_purchase_status_unknown">Unknown purchase status</string>
    <string name="error_empty_mail">Your email address is empty</string>
    <string name="error_invalid_mail">The email address is invalid</string>
    <string name="error_no_balance">You do not have enough points to withdraw</string>

    <string name="ops">Ops!</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="undefined">undefined</string>

    <string name="autenticate">Authenticating...</string>

    <string name="add">scan points</string>
    <string name="withdraw">Withdraw points</string>
    <string name="history">History</string>
    <string name="you_have">you have</string>
    <string name="points">points</string>

    <string name="home_no_item">you haven\'t scanned any points to the app yet</string>
    <string name="points_added">points have been scanned and added to your account</string>

    <string name="pending">Pending for validation</string>
    <string name="approved">Confirmed</string>
    <string name="cancelled">Canceled</string>
    <string name="refund">Refund</string>
    <string name="waiting_for_google">Waiting for Google</string>
    <string name="waiting_payment">Awaiting payment</string>

    <string name="add_balance">Points added</string>
    <string name="withdraw_history">Withdraw</string>
    <string name="refund_history">Refund</string>

    <string name="add_balance_title">Add Points</string>

    <string name="google_play">Google Play - $%1$s------------------</string>
    <string name="buy_for">Buy for 25Points</string>

    <string name="withdraw_description">* The redeem amount will be expired within 48 business hours</string>
    <string name="your_paypal_email">Your PayPal email</string>
    <string name="your_withdraw">points available</string>

    <string name="estimated">you receive $%1$s</string>
    <string name="buy_desc">you receive a discount of 25% of any order that is bellow 20 dollars.</string>
    <string name="title_activity_redeem_points">ActivityRedeemPoints</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>