<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_5"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ActivityWithdraw"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/bt_close"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_close"
            android:onClick="closeWithdrawActivity"
            android:contentDescription="@string/close" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/withdraw"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="@dimen/actionBarSize"
            android:layout_height="?attr/actionBarSize" />

    </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:scrollingCache="true">

            <LinearLayout
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UselessLeaf" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_withdraw"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_40" />

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer_view_withdraw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <include layout="@layout/placeholder_home_points" />

                            </LinearLayout>

                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <TextView
                            android:id="@+id/home_points"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/undefined"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                            android:textColor="@color/grey_40"
                            app:fontFamily="sans-serif-medium"
                            android:visibility="gone"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_mxlarge" />

                    </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/redeem_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/withdraw_description"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>