<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ActivityHome">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:scrollingCache="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/light_blue_500"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="2dp"
                            app:cardUseCompatPadding="true"
                            android:layout_marginTop="20dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/spacing_xmlarge"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    tools:ignore="UselessLeaf" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/you_have"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/light_blue_50" />

                                <com.facebook.shimmer.ShimmerFrameLayout
                                    android:id="@+id/shimmer_view_container"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical">

                                        <include layout="@layout/placeholder_home_points" />

                                    </LinearLayout>

                                </com.facebook.shimmer.ShimmerFrameLayout>

                                <TextView
                                    android:id="@+id/home_points"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/undefined"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                                    android:textColor="@android:color/white"
                                    app:fontFamily="sans-serif-medium"
                                    android:visibility="gone"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/points"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/light_blue_200" />

                                <View
                                    android:layout_width="0dp"
                                    android:layout_height="@dimen/spacing_mxlarge" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacing_small" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btn_add_balance"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/add"
                                android:theme="@style/Button.Add"
                                android:onClick="openAddFundsActivity"/>

                            <View
                                android:layout_width="@dimen/spacing_small"
                                android:layout_height="0dp" />

                            <Button
                                android:id="@+id/btn_withdraw"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/withdraw"
                                android:textColor="@color/green_400"
                                android:background="@drawable/bg_withdrawbtn"
                                android:onClick="openWithdrawActivity"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:layout_marginTop="30dp"
                            android:gravity="center"
                            android:text="@string/history"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                            android:textColor="@color/grey_40"
                            app:fontFamily="sans-serif-medium" />

                        <androidx.coordinatorlayout.widget.CoordinatorLayout
                            android:id="@+id/coordinator_lyt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/bg_image"
                                    android:layout_width="match_parent"
                                    android:layout_height="380dp"
                                    android:layout_alignParentBottom="true"
                                    android:src="@drawable/bg_no_item_cactus"
                                    android:contentDescription="@string/undefined" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/spacing_medium"
                                        android:lineSpacingExtra="@dimen/spacing_middle"
                                        android:text="@string/home_no_item"
                                        android:gravity="center"
                                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                        android:textColor="@color/grey_60" />
                                </LinearLayout>

                            </RelativeLayout>

                        </androidx.coordinatorlayout.widget.CoordinatorLayout>

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer_view_container_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <include layout="@layout/placeholder_home_history" />
                                <include layout="@layout/placeholder_home_history" />
                                <include layout="@layout/placeholder_home_history" />
                                <include layout="@layout/placeholder_home_history" />
                                <include layout="@layout/placeholder_home_history" />

                            </LinearLayout>

                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/userActivityList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:visibility="gone"
                            android:layout_marginBottom="5dp"
                            tools:ignore="InefficientWeight" />

                        <FrameLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/activity_main_frame_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

            </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>